# dbt-databricks-workflow

./: .codacy.yaml  .env.dev  .gitignore  .pre-commit-config.yaml  .sqlint.json  .sqlintignore  .sqlintrc  .sqlintrc.yaml  Makefile  README.md  pyproject.toml  sqlintrc
.devcontainer/: Dockerfile.debug  devcontainer.json  postCreateScript.sh
dbt_train/: dbt_project.yml  profiles.yml
dbt_train/macros/: generate_schema_name.sql
dbt_train/models/bronze/: bronze_dim_date.jinja.sql  bronze_dim_date.sql  bronze_dim_product.sql  bronze_dim_store.sql  bronze_fact_returns.sql  bronze_fact_sales.sql  dim_customer.sql  properties.yml
dbt_train/models/source/: sources.yml
dbt_train/tests/bronze/: fact_sales_test.jinja.sql  fact_sales_test.sql
